RESOLVED FIXED188097
Fix thread-safety issues related to RealtimeMediaSource::audioSamplesAvailable()
https://bugs.webkit.org/show_bug.cgi?id=188097
Summary Fix thread-safety issues related to RealtimeMediaSource::audioSamplesAvailable()
Chris Dumez
Reported 2018-07-27 10:45:17 PDT
Fix thread-safety issues related to RealtimeMediaSource::audioSamplesAvailable(). RealtimeMediaSource::audioSamplesAvailable() is called on a background thread but iterates over observers that may get destroyed concurrently on the main thread.
Attachments
Patch (18.83 KB, patch)
2018-07-27 13:02 PDT, Chris Dumez
no flags
Patch (18.90 KB, patch)
2018-07-27 13:53 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-07-27 11:05:10 PDT
Chris Dumez
Comment 2 2018-07-27 13:02:03 PDT
Chris Dumez
Comment 3 2018-07-27 13:53:37 PDT
WebKit Commit Bot
Comment 4 2018-07-27 15:33:58 PDT
Comment on attachment 345950 [details] Patch Clearing flags on attachment: 345950 Committed r234334: <https://trac.webkit.org/changeset/234334>
WebKit Commit Bot
Comment 5 2018-07-27 15:34:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-07-27 15:34:34 PDT
Note You need to log in before you can comment on or make changes to this bug.