Source/WebCore/platform/mediastream/RealtimeMediaSource.h
@@ -41,6 +41,7 @@
 #include "MediaSample.h"
 #include "PlatformLayer.h"
 #include "RealtimeMediaSourceCapabilities.h"
+#include <wtf/RecursiveLockAdapter.h>
 #include <wtf/ThreadSafeRefCounted.h>
 #include <wtf/Vector.h>
 #include <wtf/WeakPtr.h>
@@ -253,13 +254,16 @@ private:
     virtual void startProducingData() { }
     virtual void stopProducingData() { }
 
+    void forEachObserver(const WTF::Function<void(Observer&)>&) const;
+
     bool m_muted { false };
 
     String m_id;
     String m_persistentID;
     Type m_type;
     String m_name;
-    Vector<std::reference_wrapper<Observer>> m_observers;
+    mutable RecursiveLock m_observersLock;
+    HashSet<Observer*> m_observers;
     IntSize m_size;
     double m_frameRate { 30 };
     double m_aspectRatio { 0 };
